# cg-gamblings

./: .gitignore  .gitmodules  Complex.gd  SampleLevel.tscn  project.godot
ConvexHull/: ConvexHull.gd
c/: .gitignore  CMakeLists.txt  animation.c  animation.h  asset_loader.h  defs.h  draw.c  draw.h  entity.h  main.c  map.c  map.h  render.c  render.h  utils.c  utils.h
c/lib/: CMakeLists.txt
c/lib/include/: animation.h  asset_loader.h  b2_allocator.h  defs.h  defs.hpp  draw.h  entity.h  memory.h  render.h  utils.h
c/lib/src/: animation.c  draw.c  draw.cpp  main.c  main.cpp  map.c  map.cpp  memory.c  memory.cpp  render.c  render.cpp  utils.c
physc/: CMakeLists.txt  build_laptop.sh  build_pc.sh
physc/cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
physc/lib/: CMakeLists.txt
physc/lib/include/: asset_loader.h  camera.h  circle.h  defs.hpp  draw.h  hittable.h  map.h  material.h  math_utils.h  memory.h  plane.h  ppm.h  ray.h  render.h  scene.h  sphere.h
physc/lib/src/: camera.cpp  draw.cpp  main.cpp  map.cpp  plane.cpp  ray.cpp  render.cpp  sphere.cpp
physc/ray_tracer/include/: animation.h  broker.h  camera.h  circle.h  draw.h  entity.h  math_utils.h  memory.h  render.h  scene.h  sphere.h
physc/ray_tracer/src/: animation.cpp  main.cpp  memory.cpp  render.cpp
physc/realtime/: CMakeLists.txt
physc/realtime/include/: audio.h  camera.h  filesystem.h  lighting_scene.h  renderer.h  sample_scene.h  scene.h  scene_manager.h  shader.h  shader_sources.h  vertices.h
physc/realtime/src/: audio.cpp  camera.cpp  lighting_scene.cpp  main.cpp  renderer.cpp  sample_scene.cpp  shader.cpp
physc/realtime/tests/: filesystem_test.cpp
physc/shaders/: phong_fs.glsl  phong_vs.glsl
physc/shared/: defs.hpp
